fix: some layout issues

--- a/src/styles/brackets.less
+++ b/src/styles/brackets.less
@@ -42,6 +42,7 @@
 @import "Extn-NavigationAndHistory.less";
 @import "Extn-RecentProjects.less";
 @import "Extn-DisplayShortcuts.less";
+@import "Extn-CSSColorPreview.less";
 
 /* Overall layout */
 
@@ -3520,37 +3521,4 @@ label input {
     .toggle input:checked ~ .labels::before {
         opacity: 1;
     }
-}
-
-// These styles are for CssColorPreview feature
-// Check `extensionsIntegrated/CSSColorPreview for more reference
-/* Single color preview */
-.ico-cssColorPreview {
-    border: solid 1px rgba(0, 0, 0, 0.2);
-    display: inline-block;
-    height: 14px;
-    width: 14px;
-    margin-left: 6px;
-    position: absolute;
-    top: 8px;
-    z-index: 99999;
-}
-
-/* Multiple colors preview container (this is a div) */
-.ico-multiple-cssColorPreview {
-    position: relative;
-    display: inline-block;
-    width: 14px;
-    height: 14px;
-    margin-left: 6px;
-    border: solid 1px rgba(0, 0, 0, 0.2);
-    z-index: 99999;
-}
-
-/* For individual color boxes, they will be added inside the main .ico-multiple-cssColorPreview div */
-.ico-multiple-cssColorPreview .color-box {
-    position: absolute;
-    width: 6px;
-    height: 6px;
-    box-sizing: border-box;
 }
